--- a/new/index.html
+++ b/new/index.html
@@ -42,7 +42,7 @@
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> 
 						<span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> 
 					</button> 
-					<a class="navbar-brand" href="index.html"><h1><img src="images/logo.png" alt="logo"></h1></a> 
+					<a class="navbar-brand" href="index.html"><h1><img src="images/pcs_logo.gif" alt="logo" height="50px"></h1></a>
 				</div> 
 				<div class="collapse navbar-collapse"> 
 					<ul class="nav navbar-nav navbar-right"> 
@@ -804,7 +804,8 @@
 	<footer id="footer"> 
 		<div class="container"> 
 			<div class="text-center"> 
-				<p>Copyright &copy; 2014 - <a href="http://mostafiz.me/">Mostafiz</a> | All Rights Reserved</p> 
+				<p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> - PCS Distributors | All Rights Reserved
+				</p> 
 			</div> 
 		</div> 
 	</footer> <!--/#footer--> 
