--- a/new/index.html
+++ b/new/index.html
@@ -42,18 +42,18 @@
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> 
 						<span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> 
 					</button> 
-					<a class="navbar-brand" href="index.html"><h1><img src="images/pcs_logo.gif" alt="logo" height="50px"></h1></a>
+					<a class="navbar-brand" href="index.html"><h1><img src="images/pcs_logo.gif" alt="PCS Distributors Logo" height="50px"></h1></a>
 				</div> 
 				<div class="collapse navbar-collapse"> 
 					<ul class="nav navbar-nav navbar-right"> 
 						<li class="scroll active"><a href="#navigation">Home</a></li> 
 						<li class="scroll"><a href="#about-us">About Us</a></li> 
-						<li class="scroll"><a href="#services">Services</a></li> 
-						<li class="scroll"><a href="#our-team">Our Team</a></li> 
+						<li class="scroll"><a href="#services">Products</a></li> 
+						<!-- <li class="scroll"><a href="#our-team">Our Team</a></li>  -->
 						<li class="scroll"><a href="#portfolio">Portfolio</a></li> 
-						<li class="scroll"><a href="#clients">Clients</a></li> 
-						<li class="scroll"><a href="#blog">Blog</a></li> 
-						<li class="scroll"><a href="#contact">Contact</a></li> 
+						<li class="scroll"><a href="#clients">Testimonies</a></li> 
+						<!-- <li class="scroll"><a href="#blog">Blog</a></li>  -->
+						<!-- <li class="scroll"><a href="#contact">Contact</a></li>  -->
 					</ul> 
 				</div> 
 			</div> 
@@ -186,7 +186,7 @@
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-sm-8 col-sm-offset-2">
-					<h2 class="title-one">Services</h2>
+					<h2 class="title-one">Products</h2>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
 				</div>
 			</div>
@@ -194,24 +194,31 @@
 				<div class="col-sm-12">
 					<div class="our-service">
 						<div class="services row">
-							<div class="col-sm-4">
+							<div class="col-sm-3">
 								<div class="single-service">
-									<i class="fa fa-th"></i>
-									<h2>Modern Design</h2>
+									<img src="images/services/woodFlooring.jpg">
+									<h2>Wood Flooring</h2>
 									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.</p>
 								</div>
 							</div>
-							<div class="col-sm-4">
+							<div class="col-sm-3">
 								<div class="single-service">
-									<i class="fa fa-html5"></i>
-									<h2>Web Development</h2>
+									<img src="images/services/carpeting.jpg">
+									<h2>Carpet</h2>
 									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy </p>
 								</div>
 							</div>
-							<div class="col-sm-4">
+							<div class="col-sm-3">
 								<div class="single-service">
-									<i class="fa fa-users"></i>
-									<h2>Online Marketing</h2>
+									<img src="images/services/laminateFlooring.jpg">
+									<h2>Laminate </h2>
+									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy </p>
+								</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="single-service">
+									<img src="images/services/logoMats.jpg">
+									<h2>Logo Mats</h2>
 									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.</p>
 								</div>
 							</div></div>
@@ -221,7 +228,7 @@
 			</div>
 		</section><!--/#service-->
 
-		<section id="our-team">
+		<!-- <section id="oam">
 			<div class="container">
 				<div class="row text-center">
 					<div class="col-sm-8 col-sm-offset-2">
@@ -360,7 +367,7 @@
 					</div>
 				</div>
 			</div>
-		</section><!--/#Our-Team-->
+		</section><!--/#Our-Team--> -->
 
 		<section id="portfolio">
 			<div class="container">
