--- a/new/index.html
+++ b/new/index.html
@@ -85,7 +85,7 @@
 			<div class="item" style="background-image: url(images/slider/slide1.jpg)"> 
 				<div class="carousel-caption"> 
 					<div> 
-						<h2 class="heading animated bounceInRight">Extensive collection of flooring options</h2> 
+						<h2 class="heading animated bounceInRight">Vast collection of flooring options</h2> 
 						<p class="animated bounceInLeft">100% At PCS Distributors we provide a access to many different manufacturers</p> 
 						<a class="btn btn-default slider-btn animated bounceInUp" href="#">Browse Flooring Selection</a> 
 					</div> 
@@ -104,77 +104,7 @@
 		<div class="text-center">
 			<div class="col-sm-8 col-sm-offset-2">
 				<h2 class="title-one">Why With Us?</h2>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-			</div>
-		</div>
-		<div class="about-us">
-			<div class="row">
-				<div class="col-sm-6">
-					<h3>Why with us?</h3>
-					<ul class="nav nav-tabs">
-						<li class="active"><a href="#about" data-toggle="tab"><i class="fa fa-chain-broken"></i> About</a></li>
-						<li><a href="#mission" data-toggle="tab"><i class="fa fa-th-large"></i> Mission</a></li>
-						<li><a href="#community" data-toggle="tab"><i class="fa fa-users"></i> Community</a></li>
-					</ul>
-					<div class="tab-content">
-						<div class="tab-pane fade in active" id="about">
-							<div class="media">
-								<img class="pull-left media-object" src="images/about-us/about.jpg" alt="about us"> 
-								<div class="media-body">
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-								</div>
-							</div>
-						</div>
-						<div class="tab-pane fade" id="mission">
-							<div class="media">
-								<img class="pull-left media-object" src="images/about-us/mission.jpg" alt="Mission"> 
-								<div class="media-body">
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci </p>
-								</div>
-							</div>
-						</div>
-						<div class="tab-pane fade" id="community">
-							<div class="media">
-								<img class="pull-left media-object" src="images/about-us/community.jpg" alt="Community"> 
-								<div class="media-body">
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-6">
-					<h3>Our Skills</h3>
-					<div class="skill-bar">
-						<div class="skillbar clearfix " data-percent="90%">
-							<div class="skillbar-title">
-								<span>HTML5 &amp; CSS3</span>
-							</div>
-							<div class="skillbar-bar"></div>
-							<div class="skill-bar-percent">90%</div>
-						</div> <!-- End Skill Bar -->
-						<div class="skillbar clearfix" data-percent="85%">
-							<div class="skillbar-title"><span>UI Design</span></div>
-							<div class="skillbar-bar"></div>
-							<div class="skill-bar-percent">85%</div>
-						</div> <!-- End Skill Bar -->
-						<div class="skillbar clearfix " data-percent="70%">
-							<div class="skillbar-title"><span>jQuery</span></div>
-							<div class="skillbar-bar"></div>
-							<div class="skill-bar-percent">70%</div>
-						</div> <!-- End Skill Bar -->
-						<div class="skillbar clearfix " data-percent="60%">
-							<div class="skillbar-title"><span>PHP</span></div>
-							<div class="skillbar-bar"></div>
-							<div class="skill-bar-percent">60%</div>
-						</div> <!-- End Skill Bar -->
-						<div class="skillbar clearfix " data-percent="75%">
-							<div class="skillbar-title"><span>Wordpress</span></div>
-							<div class="skillbar-bar"></div>
-							<div class="skill-bar-percent">75%</div>
-						</div> <!-- End Skill Bar --></div>
-					</div>
-				</div>
+				<p>PCS Distributors provides high quality flooring with exceptional customer service and satisfaction.</p>
 			</div>
 		</div>
 	</section><!--/#about-us-->
