fixed meta attributes

--- a/new/index.html
+++ b/new/index.html
@@ -3,9 +3,8 @@
 <head> 
 	<meta charset="utf-8"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-	<meta name="description" content="Creative One Page Parallax Template">
-	<meta name="keywords" content="Creative, Onepage, Parallax, HTML5, Bootstrap, Popular, custom, personal, portfolio" /> 
-	<meta name="author" content=""> 
+	<meta name="description" content="PCS Distributors">
+	<meta name="title" content="PCS Distributors">
 	<title>HIMU - OnePage HTML Parallax template</title> 
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/prettyPhoto.css" rel="stylesheet"> 
@@ -15,11 +14,11 @@
 	<link href="css/responsive.css" rel="stylesheet"> 
 	<!--[if lt IE 9]> <script src="js/html5shiv.js"></script> 
 	<script src="js/respond.min.js"></script> <![endif]--> 
-	<link rel="shortcut icon" href="images/ico/favicon.png"> 
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png"> 
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png"> 
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png"> 
-	<link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+	<link rel="shortcut icon" href="images/ico/pcs_logo.png"> 
+	<link rel="pcs_logo" sizes="144x144" href="pcs_logo."> 
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/pcs_logo.png"> 
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/pcs_logo.png"> 
+	<link rel="apple-touch-icon-precomposed" href="images/ico/pcs_logo.png">
 </head><!--/head-->
 <body>
 	<div class="preloader">
