--- a/new/index.html
+++ b/new/index.html
@@ -160,15 +160,15 @@
 				<div class="row text-center">
 					<div class="col-sm-8 col-sm-offset-2">
 						<h2 class="title-one">Portfolio</h2>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit.</p>
+						<p>Here is a display of some of the excellent work produced by PCS Distributors.</p>
 					</div>
 				</div>
 				<ul class="portfolio-filter text-center">
 					<li><a class="btn btn-default active" href="#" data-filter="*">All</a></li>
-					<li><a class="btn btn-default" href="#" data-filter=".html">Html</a></li>
-					<li><a class="btn btn-default" href="#" data-filter=".wordpress">Wordpress</a></li>
-					<li><a class="btn btn-default" href="#" data-filter=".joomla">Joomla</a></li>
-					<li><a class="btn btn-default" href="#" data-filter=".megento">Megento</a></li>
+					<li><a class="btn btn-default" href="#" data-filter=".html">Wood</a></li>
+					<li><a class="btn btn-default" href="#" data-filter=".wordpress">Carpet</a></li>
+					<li><a class="btn btn-default" href="#" data-filter=".joomla">Laminate</a></li>
+					<li><a class="btn btn-default" href="#" data-filter=".megento">Logo Mats</a></li>
 				</ul><!--/#portfolio-filter-->
 				<div class="portfolio-items">
 					<div class="col-sm-3 col-xs-12 portfolio-item html">
@@ -179,7 +179,7 @@
 									<h3>Novel</h3>
 									<h4>Lorem ipsum dolor sit amet consectetur</h4>
 									<a href="#"><i class="fa fa-link"></i></a>
-									<a href="images/portfolio/big-item.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+									<a href="images/portfolio/big-item1.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 								</div>
 							</div>
 						</div>
@@ -192,7 +192,7 @@
 									<h3>Novel</h3>
 									<h4>Lorem ipsum dolor sit amet consectetur</h4>
 									<a href="#"><i class="fa fa-link"></i></a>
-									<a href="images/portfolio/big-item4.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+									<a href="images/portfolio/big-item2.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 								</div>
 							</div>
 						</div>
@@ -205,7 +205,7 @@
 								<h3>Novel</h3>
 								<h4>Lorem ipsum dolor sit amet consectetur</h4>
 								<a href="#"><i class="fa fa-link"></i></a>
-								<a href="images/portfolio/big-item.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+								<a href="images/portfolio/big-item3.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 							</div>
 						</div>
 					</div>
@@ -218,7 +218,7 @@
 								<h3>Novel</h3>
 								<h4>Lorem ipsum dolor sit amet consectetur</h4>
 								<a href="#"><i class="fa fa-link"></i></a>
-								<a href="images/portfolio/big-item.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+								<a href="images/portfolio/big-item4.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 							</div>
 						</div>
 					</div>
@@ -230,7 +230,7 @@
 							<h3>Novel</h3>
 							<h4>Lorem ipsum dolor sit amet consectetur</h4>
 							<a href="#"><i class="fa fa-link"></i></a>
-							<a href="images/portfolio/big-item.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+							<a href="images/portfolio/big-item5.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 						</div>
 					</div>
 				</div>
@@ -243,7 +243,7 @@
 							<h3>Novel</h3>
 							<h4>Lorem ipsum dolor sit amet consectetur</h4>
 							<a href="#"><i class="fa fa-link"></i></a>
-							<a href="images/portfolio/big-item.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+							<a href="images/portfolio/big-item6.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 						</div>
 					</div>
 				</div>
@@ -256,7 +256,7 @@
 							<h3>Novel</h3>
 							<h4>Lorem ipsum dolor sit amet consectetur</h4>
 							<a href="#"><i class="fa fa-link"></i></a>
-							<a href="images/portfolio/big-item.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+							<a href="images/portfolio/big-item7.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 						</div>
 					</div>
 				</div>
@@ -268,7 +268,7 @@
 								<h3>Novel</h3>
 								<h4>Lorem ipsum dolor sit amet consectetur</h4>
 								<a href="#"><i class="fa fa-link"></i></a>
-								<a href="images/portfolio/big-item.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+								<a href="images/portfolio/big-item8.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 							</div>
 						</div>
 					</div>
@@ -281,7 +281,7 @@
 								<h3>Novel</h3>
 								<h4>Lorem ipsum dolor sit amet consectetur</h4>
 								<a href="#"><i class="fa fa-link"></i></a>
-								<a href="images/portfolio/big-item.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+								<a href="images/portfolio/big-item9.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 							</div>
 						</div>
 					</div>
@@ -293,7 +293,7 @@
 									<h3>Novel</h3>
 									<h4>Lorem ipsum dolor sit amet consectetur</h4>
 									<a href="#"><i class="fa fa-link"></i></a>
-									<a href="images/portfolio/big-item.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+									<a href="images/portfolio/big-item10.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 								</div>
 							</div>
 						</div>
@@ -305,7 +305,7 @@
 										<h3>Novel</h3>
 										<h4>Lorem ipsum dolor sit amet consectetur</h4>
 										<a href="#"><i class="fa fa-link"></i></a>
-										<a href="images/portfolio/big-item3.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+										<a href="images/portfolio/big-item11.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 									</div>
 								</div>
 							</div>
@@ -317,7 +317,7 @@
 											<h3>Novel</h3>
 											<h4>Lorem ipsum dolor sit amet consectetur</h4>
 											<a href="#"><i class="fa fa-link"></i></a>
-											<a href="images/portfolio/big-item4.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+											<a href="images/portfolio/big-item12.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 										</div>
 									</div>
 								</div>
