Changed background, added placeholder text.
Changed service background and testimony background. Removed filler text
and replaced with placeholder in products section.

--- a/new/index.html
+++ b/new/index.html
@@ -113,7 +113,7 @@
 			<div class="row text-center">
 				<div class="col-sm-8 col-sm-offset-2">
 					<h2 class="title-one">Products</h2>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+					<p>Placeholder</p>
 				</div>
 			</div>
 			<div class="row">
@@ -124,28 +124,28 @@
 								<div class="single-service">
 									<img src="images/services/woodFlooring.jpg">
 									<h2>Wood Flooring</h2>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.</p>
+									<p>Placeholder</p>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="single-service">
 									<img src="images/services/carpeting.jpg">
 									<h2>Carpet</h2>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy </p>
+									<p>Placeholder</p>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="single-service">
 									<img src="images/services/laminateFlooring.jpg">
 									<h2>Laminate </h2>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy </p>
+									<p>Placeholder</p>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="single-service">
 									<img src="images/services/logoMats.jpg">
 									<h2>Logo Mats</h2>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.</p>
+									<p>Placeholder</p>
 								</div>
 							</div></div>
 						</div>
