Added cart page, fixed slider animations.
Added a prototype cart page and made the slider animations uniform.
Minor text changes as well.

--- a/new/index.html
+++ b/new/index.html
@@ -68,16 +68,17 @@
 				<div class="item active" style="background-image: url(images/slider/slide3.jpg)"> 
 					<div class="carousel-caption"> 
 						<div> 
-							<h2 class="heading animated bounceInDown">PCS Distributors</h2> 
-							<p class="animated bounceInUp">Providing high quality floors</p> 
-							<a class="btn btn-default slider-btn animated fadeIn" href="#">Browse Flooring Selection</a> 
+							<h2 class="heading animated bounceInRight">PCS Distributors</h2> 
+							<p class="animated bounceInLeft">Providing high quality floors since 2016</p> 
+							<a class="btn btn-default slider-btn animated bounceInUp" href="#">Browse Flooring Selection</a> 
 						</div> 
 					</div> 
 				</div>
 				<div class="item" style="background-image: url(images/slider/slide2.jpg)"> 
 					<div class="carousel-caption"> <div> 
-						<h2 class="heading animated bounceInDown">Order a sample today!</h2> 
-						<p class="animated bounceInUp">We provide high quality samples</p> <a class="btn btn-default slider-btn animated fadeIn" href="#">Browse Flooring Selection</a> 
+						<h2 class="heading animated bounceInRight">Order a sample today!</h2> 
+						<p class="animated bounceInLeft">We provide high quality samples</p> 
+						<a class="btn btn-default slider-btn animated bounceInUp" href="#">Browse Flooring Selection</a> 
 					</div> 
 				</div> 
 			</div> 
@@ -85,7 +86,7 @@
 				<div class="carousel-caption"> 
 					<div> 
 						<h2 class="heading animated bounceInRight">Vast collection of flooring options</h2> 
-						<p class="animated bounceInLeft">100% At PCS Distributors we provide a access to many different manufacturers</p> 
+						<p class="animated bounceInLeft">At PCS Distributors we provide access to many different manufacturers</p> 
 						<a class="btn btn-default slider-btn animated bounceInUp" href="#">Browse Flooring Selection</a> 
 					</div> 
 				</div> 
@@ -176,8 +177,8 @@
 							<div class="portfolio-image">
 								<img src="images/portfolio/1.jpg" alt=""></div> 
 								<div class="mask text-center">
-									<h3>Novel</h3>
-									<h4>Lorem ipsum dolor sit amet consectetur</h4>
+									<h3>Product</h3>
+									<h4>Product Description</h4>
 									<a href="#"><i class="fa fa-link"></i></a>
 									<a href="images/portfolio/big-item1.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 								</div>
@@ -189,8 +190,8 @@
 									<img src="images/portfolio/2.jpg" alt="">
 								</div> 
 								<div class="mask text-center">
-									<h3>Novel</h3>
-									<h4>Lorem ipsum dolor sit amet consectetur</h4>
+									<h3>Product</h3>
+									<h4>Product Description</h4>
 									<a href="#"><i class="fa fa-link"></i></a>
 									<a href="images/portfolio/big-item2.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 								</div>
@@ -202,8 +203,8 @@
 									<img src="images/portfolio/3.jpg" alt="">
 								</div> 
 								<div class="mask text-center">
-								<h3>Novel</h3>
-								<h4>Lorem ipsum dolor sit amet consectetur</h4>
+								<h3>Product</h3>
+								<h4>Product Description</h4>
 								<a href="#"><i class="fa fa-link"></i></a>
 								<a href="images/portfolio/big-item3.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 							</div>
@@ -215,8 +216,8 @@
 								<img src="images/portfolio/4.jpg" alt="">
 							</div> 
 							<div class="mask text-center">
-								<h3>Novel</h3>
-								<h4>Lorem ipsum dolor sit amet consectetur</h4>
+								<h3>Product</h3>
+								<h4>Product Description</h4>
 								<a href="#"><i class="fa fa-link"></i></a>
 								<a href="images/portfolio/big-item4.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 							</div>
@@ -227,8 +228,8 @@
 							<div class="portfolio-image">
 								<img src="images/portfolio/5.jpg" alt="">
 							</div> <div class="mask text-center">
-							<h3>Novel</h3>
-							<h4>Lorem ipsum dolor sit amet consectetur</h4>
+							<h3>Product</h3>
+							<h4>Product Description</h4>
 							<a href="#"><i class="fa fa-link"></i></a>
 							<a href="images/portfolio/big-item5.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 						</div>
@@ -240,8 +241,8 @@
 							<img src="images/portfolio/6.jpg" alt="">
 						</div> 
 						<div class="mask text-center">
-							<h3>Novel</h3>
-							<h4>Lorem ipsum dolor sit amet consectetur</h4>
+							<h3>Product</h3>
+							<h4>Product Description</h4>
 							<a href="#"><i class="fa fa-link"></i></a>
 							<a href="images/portfolio/big-item6.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 						</div>
@@ -253,8 +254,8 @@
 							<img src="images/portfolio/7.jpg" alt="">
 						</div> 
 						<div class="mask text-center">
-							<h3>Novel</h3>
-							<h4>Lorem ipsum dolor sit amet consectetur</h4>
+							<h3>Product</h3>
+							<h4>Product Description</h4>
 							<a href="#"><i class="fa fa-link"></i></a>
 							<a href="images/portfolio/big-item7.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 						</div>
@@ -265,8 +266,8 @@
 						<div class="portfolio-image">
 							<img src="images/portfolio/8.jpg" alt=""></div> 
 							<div class="mask text-center">
-								<h3>Novel</h3>
-								<h4>Lorem ipsum dolor sit amet consectetur</h4>
+								<h3>Product</h3>
+								<h4>Product Description</h4>
 								<a href="#"><i class="fa fa-link"></i></a>
 								<a href="images/portfolio/big-item8.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 							</div>
@@ -278,8 +279,8 @@
 								<img src="images/portfolio/9.jpg" alt="">
 							</div> 
 							<div class="mask text-center">
-								<h3>Novel</h3>
-								<h4>Lorem ipsum dolor sit amet consectetur</h4>
+								<h3>Product</h3>
+								<h4>Product Description</h4>
 								<a href="#"><i class="fa fa-link"></i></a>
 								<a href="images/portfolio/big-item9.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 							</div>
@@ -290,8 +291,8 @@
 							<div class="portfolio-image">
 								<img src="images/portfolio/10.jpg" alt=""></div> 
 								<div class="mask text-center">
-									<h3>Novel</h3>
-									<h4>Lorem ipsum dolor sit amet consectetur</h4>
+									<h3>Product</h3>
+									<h4>Product Description</h4>
 									<a href="#"><i class="fa fa-link"></i></a>
 									<a href="images/portfolio/big-item10.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 								</div>
@@ -302,8 +303,8 @@
 								<div class="portfolio-image">
 									<img src="images/portfolio/11.jpg" alt=""></div> 
 									<div class="mask text-center">
-										<h3>Novel</h3>
-										<h4>Lorem ipsum dolor sit amet consectetur</h4>
+										<h3>Product</h3>
+										<h4>Product Description</h4>
 										<a href="#"><i class="fa fa-link"></i></a>
 										<a href="images/portfolio/big-item11.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 									</div>
@@ -314,8 +315,8 @@
 									<div class="portfolio-image">
 										<img src="images/portfolio/12.jpg" alt=""></div> 
 										<div class="mask text-center">
-											<h3>Novel</h3>
-											<h4>Lorem ipsum dolor sit amet consectetur</h4>
+											<h3>Product</h3>
+											<h4>Product Description</h4>
 											<a href="#"><i class="fa fa-link"></i></a>
 											<a href="images/portfolio/big-item12.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 										</div>
