--- a/new/catalog.html
+++ b/new/catalog.html
@@ -57,166 +57,167 @@
 
 	
 
-		<section id="portfolio">
-			<div class="container">
-				<div class="row text-center">
-					<div class="col-sm-8 col-sm-offset-2">
-						<h2 id="titleHeader" class="title-one">Catalog</h2>
-					</div>
+	<section id="portfolio">
+		<div class="container">
+			<div class="row text-center">
+				<div class="col-sm-8 col-sm-offset-2">
+					<h2 class="title-one">Portfolio</h2>
+					<p>Here is a display of some of the excellent work produced by PCS Distributors.</p>
 				</div>
-				<ul class="portfolio-filter text-center">
-					<li><a class="btn btn-default active" href="#" data-filter="*">All</a></li>
-					<li><a class="btn btn-default" href="#" data-filter=".html">Wood</a></li>
-					<li><a class="btn btn-default" href="#" data-filter=".wordpress">Carpet</a></li>
-					<li><a class="btn btn-default" href="#" data-filter=".joomla">Laminate</a></li>
-					<li><a class="btn btn-default" href="#" data-filter=".megento">Logo Mats</a></li>
-				</ul><!--/#portfolio-filter-->
-				<div class="portfolio-items">
-					<div class="col-sm-3 col-xs-12 portfolio-item html">
+			</div>
+			<ul class="portfolio-filter text-center">
+				<li><a class="btn btn-default active" href="#" data-filter="*">All</a></li>
+				<li><a class="btn btn-default" href="#" data-filter=".wood">Wood</a></li>
+				<li><a class="btn btn-default" href="#" data-filter=".carpet">Carpet</a></li>
+				<li><a class="btn btn-default" href="#" data-filter=".laminate">Laminate</a></li>
+				<li><a class="btn btn-default" href="#" data-filter=".logo">Logo Mats</a></li>
+			</ul><!--/#portfolio-filter-->
+			<div class="portfolio-items">
+				<div class="col-sm-3 col-xs-12 portfolio-item wood">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<img src="images/portfolio/1.jpg" alt=""></div> 
+							<div class="mask text-center">
+								<h3>Product</h3>
+								<h4>Product Description</h4>
+								<a href="#"><i class="fa fa-link"></i></a>
+								<a href="images/portfolio/big-item1.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-3 col-xs-12 portfolio-item laminate">
+						<div class="view efffect" >
+							<div class="portfolio-image">
+								<img src="images/portfolio/2.jpg" alt="">
+							</div> 
+							<div class="mask text-center">
+								<h3>Product</h3>
+								<h4>Product Description</h4>
+								<a href="#"><i class="fa fa-link"></i></a>
+								<a href="images/portfolio/big-item2.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-3 col-xs-12 portfolio-item carpet">
 						<div class="view efffect">
 							<div class="portfolio-image">
-								<img src="images/portfolio/1.jpg" alt=""></div> 
-								<div class="mask text-center">
-									<h3>Novel</h3>
-									<h4>Lorem ipsum dolor sit amet consectetur</h4>
-									<a href="#"><i class="fa fa-link"></i></a>
-									<a href="images/portfolio/big-item1.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-								</div>
-							</div>
-						</div>
-						<div class="col-sm-3 col-xs-12 portfolio-item jooma">
-							<div class="view efffect" >
-								<div class="portfolio-image">
-									<img src="images/portfolio/2.jpg" alt="">
-								</div> 
-								<div class="mask text-center">
-									<h3>Novel</h3>
-									<h4>Lorem ipsum dolor sit amet consectetur</h4>
-									<a href="#"><i class="fa fa-link"></i></a>
-									<a href="images/portfolio/big-item2.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-								</div>
-							</div>
-						</div>
-						<div class="col-sm-3 col-xs-12 portfolio-item wordpress">
-							<div class="view efffect">
-								<div class="portfolio-image">
-									<img src="images/portfolio/3.jpg" alt="">
-								</div> 
-								<div class="mask text-center">
-								<h3>Novel</h3>
-								<h4>Lorem ipsum dolor sit amet consectetur</h4>
+								<img src="images/portfolio/3.jpg" alt="">
+							</div> 
+							<div class="mask text-center">
+								<h3>Product</h3>
+								<h4>Product Description</h4>
 								<a href="#"><i class="fa fa-link"></i></a>
 								<a href="images/portfolio/big-item3.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item megento">
+					<div class="col-sm-3 col-xs-12 portfolio-item logo">
 						<div class="view efffect">
 							<div class="portfolio-image">
 								<img src="images/portfolio/4.jpg" alt="">
 							</div> 
 							<div class="mask text-center">
-								<h3>Novel</h3>
-								<h4>Lorem ipsum dolor sit amet consectetur</h4>
+								<h3>Product</h3>
+								<h4>Product Description</h4>
 								<a href="#"><i class="fa fa-link"></i></a>
 								<a href="images/portfolio/big-item4.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item html">
+					<div class="col-sm-3 col-xs-12 portfolio-item wood">
 						<div class="view efffect">
 							<div class="portfolio-image">
 								<img src="images/portfolio/5.jpg" alt="">
 							</div> <div class="mask text-center">
-							<h3>Novel</h3>
-							<h4>Lorem ipsum dolor sit amet consectetur</h4>
+							<h3>Product</h3>
+							<h4>Product Description</h4>
 							<a href="#"><i class="fa fa-link"></i></a>
 							<a href="images/portfolio/big-item5.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-3 col-xs-12 portfolio-item wordpress">
+				<div class="col-sm-3 col-xs-12 portfolio-item carpet">
 					<div class="view efffect">
 						<div class="portfolio-image">
 							<img src="images/portfolio/6.jpg" alt="">
 						</div> 
 						<div class="mask text-center">
-							<h3>Novel</h3>
-							<h4>Lorem ipsum dolor sit amet consectetur</h4>
+							<h3>Product</h3>
+							<h4>Product Description</h4>
 							<a href="#"><i class="fa fa-link"></i></a>
 							<a href="images/portfolio/big-item6.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-3 col-xs-12 portfolio-item html">
+				<div class="col-sm-3 col-xs-12 portfolio-item wood">
 					<div class="view efffect">
 						<div class="portfolio-image">
 							<img src="images/portfolio/7.jpg" alt="">
 						</div> 
 						<div class="mask text-center">
-							<h3>Novel</h3>
-							<h4>Lorem ipsum dolor sit amet consectetur</h4>
+							<h3>Product</h3>
+							<h4>Product Description</h4>
 							<a href="#"><i class="fa fa-link"></i></a>
 							<a href="images/portfolio/big-item7.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-3 col-xs-12 portfolio-item joomla">
+				<div class="col-sm-3 col-xs-12 portfolio-item laminate">
 					<div class="view efffect">
 						<div class="portfolio-image">
 							<img src="images/portfolio/8.jpg" alt=""></div> 
 							<div class="mask text-center">
-								<h3>Novel</h3>
-								<h4>Lorem ipsum dolor sit amet consectetur</h4>
+								<h3>Product</h3>
+								<h4>Product Description</h4>
 								<a href="#"><i class="fa fa-link"></i></a>
 								<a href="images/portfolio/big-item8.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item html">
+					<div class="col-sm-3 col-xs-12 portfolio-item wood">
 						<div class="view efffect">
 							<div class="portfolio-image">
 								<img src="images/portfolio/9.jpg" alt="">
 							</div> 
 							<div class="mask text-center">
-								<h3>Novel</h3>
-								<h4>Lorem ipsum dolor sit amet consectetur</h4>
+								<h3>Product</h3>
+								<h4>Product Description</h4>
 								<a href="#"><i class="fa fa-link"></i></a>
 								<a href="images/portfolio/big-item9.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item wordpress">
+					<div class="col-sm-3 col-xs-12 portfolio-item carpet">
 						<div class="view efffect">
 							<div class="portfolio-image">
 								<img src="images/portfolio/10.jpg" alt=""></div> 
 								<div class="mask text-center">
-									<h3>Novel</h3>
-									<h4>Lorem ipsum dolor sit amet consectetur</h4>
+									<h3>Product</h3>
+									<h4>Product Description</h4>
 									<a href="#"><i class="fa fa-link"></i></a>
 									<a href="images/portfolio/big-item10.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-3 col-xs-12 portfolio-item joomla">
+						<div class="col-sm-3 col-xs-12 portfolio-item laminate">
 							<div class="view efffect">
 								<div class="portfolio-image">
 									<img src="images/portfolio/11.jpg" alt=""></div> 
 									<div class="mask text-center">
-										<h3>Novel</h3>
-										<h4>Lorem ipsum dolor sit amet consectetur</h4>
+										<h3>Product</h3>
+										<h4>Product Description</h4>
 										<a href="#"><i class="fa fa-link"></i></a>
 										<a href="images/portfolio/big-item11.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 									</div>
 								</div>
 							</div>
-							<div class="col-sm-3 col-xs-12 portfolio-item megento">
+							<div class="col-sm-3 col-xs-12 portfolio-item logo">
 								<div class="view efffect">
 									<div class="portfolio-image">
 										<img src="images/portfolio/12.jpg" alt=""></div> 
 										<div class="mask text-center">
-											<h3>Novel</h3>
-											<h4>Lorem ipsum dolor sit amet consectetur</h4>
+											<h3>Product</h3>
+											<h4>Product Description</h4>
 											<a href="#"><i class="fa fa-link"></i></a>
 											<a href="images/portfolio/big-item12.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 										</div>
@@ -224,24 +225,23 @@
 								</div>
 							</div>
 						</div> 
-
 					</section> <!--/#portfolio-->
 
-						<footer id="footer"> 
-							<div class="container"> 
-								<div class="text-center"> 
-									<p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> - PCS Distributors | All Rights Reserved
-									</p> 
-								</div> 
+					<footer id="footer"> 
+						<div class="container"> 
+							<div class="text-center"> 
+								<p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> - PCS Distributors | All Rights Reserved
+								</p> 
 							</div> 
-						</footer> <!--/#footer--> 
+						</div> 
+					</footer> <!--/#footer--> 
 
-						<script type="text/javascript" src="js/jquery.js"></script> 
-						<script type="text/javascript" src="js/bootstrap.min.js"></script>
-						<script type="text/javascript" src="js/smoothscroll.js"></script> 
-						<script type="text/javascript" src="js/jquery.isotope.min.js"></script>
-						<script type="text/javascript" src="js/jquery.prettyPhoto.js"></script> 
-						<script type="text/javascript" src="js/jquery.parallax.js"></script> 
-						<script type="text/javascript" src="js/main.js"></script> 
-					</body>
-					</html>
+					<script type="text/javascript" src="js/jquery.js"></script> 
+					<script type="text/javascript" src="js/bootstrap.min.js"></script>
+					<script type="text/javascript" src="js/smoothscroll.js"></script> 
+					<script type="text/javascript" src="js/jquery.isotope.min.js"></script>
+					<script type="text/javascript" src="js/jquery.prettyPhoto.js"></script> 
+					<script type="text/javascript" src="js/jquery.parallax.js"></script> 
+					<script type="text/javascript" src="js/main.js"></script> 
+				</body>
+				</html>
