--- a/new/index.html
+++ b/new/index.html
@@ -166,13 +166,13 @@
 				</div>
 				<ul class="portfolio-filter text-center">
 					<li><a class="btn btn-default active" href="#" data-filter="*">All</a></li>
-					<li><a class="btn btn-default" href="#" data-filter=".html">Wood</a></li>
-					<li><a class="btn btn-default" href="#" data-filter=".wordpress">Carpet</a></li>
-					<li><a class="btn btn-default" href="#" data-filter=".joomla">Laminate</a></li>
-					<li><a class="btn btn-default" href="#" data-filter=".megento">Logo Mats</a></li>
+					<li><a class="btn btn-default" href="#" data-filter=".wood">Wood</a></li>
+					<li><a class="btn btn-default" href="#" data-filter=".carpet">Carpet</a></li>
+					<li><a class="btn btn-default" href="#" data-filter=".laminate">Laminate</a></li>
+					<li><a class="btn btn-default" href="#" data-filter=".logo">Logo Mats</a></li>
 				</ul><!--/#portfolio-filter-->
 				<div class="portfolio-items">
-					<div class="col-sm-3 col-xs-12 portfolio-item html">
+					<div class="col-sm-3 col-xs-12 portfolio-item wood">
 						<div class="view efffect">
 							<div class="portfolio-image">
 								<img src="images/portfolio/1.jpg" alt=""></div> 
@@ -184,7 +184,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-3 col-xs-12 portfolio-item jooma">
+						<div class="col-sm-3 col-xs-12 portfolio-item laminate">
 							<div class="view efffect" >
 								<div class="portfolio-image">
 									<img src="images/portfolio/2.jpg" alt="">
@@ -197,7 +197,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-3 col-xs-12 portfolio-item wordpress">
+						<div class="col-sm-3 col-xs-12 portfolio-item carpet">
 							<div class="view efffect">
 								<div class="portfolio-image">
 									<img src="images/portfolio/3.jpg" alt="">
@@ -210,7 +210,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item megento">
+					<div class="col-sm-3 col-xs-12 portfolio-item logo">
 						<div class="view efffect">
 							<div class="portfolio-image">
 								<img src="images/portfolio/4.jpg" alt="">
@@ -223,7 +223,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item html">
+					<div class="col-sm-3 col-xs-12 portfolio-item wood">
 						<div class="view efffect">
 							<div class="portfolio-image">
 								<img src="images/portfolio/5.jpg" alt="">
@@ -235,7 +235,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-3 col-xs-12 portfolio-item wordpress">
+				<div class="col-sm-3 col-xs-12 portfolio-item carpet">
 					<div class="view efffect">
 						<div class="portfolio-image">
 							<img src="images/portfolio/6.jpg" alt="">
@@ -248,7 +248,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-3 col-xs-12 portfolio-item html">
+				<div class="col-sm-3 col-xs-12 portfolio-item wood">
 					<div class="view efffect">
 						<div class="portfolio-image">
 							<img src="images/portfolio/7.jpg" alt="">
@@ -261,7 +261,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-3 col-xs-12 portfolio-item joomla">
+				<div class="col-sm-3 col-xs-12 portfolio-item laminate">
 					<div class="view efffect">
 						<div class="portfolio-image">
 							<img src="images/portfolio/8.jpg" alt=""></div> 
@@ -273,7 +273,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item html">
+					<div class="col-sm-3 col-xs-12 portfolio-item wood">
 						<div class="view efffect">
 							<div class="portfolio-image">
 								<img src="images/portfolio/9.jpg" alt="">
@@ -286,7 +286,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item wordpress">
+					<div class="col-sm-3 col-xs-12 portfolio-item carpet">
 						<div class="view efffect">
 							<div class="portfolio-image">
 								<img src="images/portfolio/10.jpg" alt=""></div> 
@@ -298,7 +298,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-3 col-xs-12 portfolio-item joomla">
+						<div class="col-sm-3 col-xs-12 portfolio-item laminate">
 							<div class="view efffect">
 								<div class="portfolio-image">
 									<img src="images/portfolio/11.jpg" alt=""></div> 
@@ -310,7 +310,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-sm-3 col-xs-12 portfolio-item megento">
+							<div class="col-sm-3 col-xs-12 portfolio-item logo">
 								<div class="view efffect">
 									<div class="portfolio-image">
 										<img src="images/portfolio/12.jpg" alt=""></div> 
