--- a/new/index.html
+++ b/new/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 	<meta name="description" content="PCS Distributors">
 	<meta name="title" content="PCS Distributors">
-	<title>HIMU - OnePage HTML Parallax template</title> 
+	<title>PCS Distributors</title> 
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/prettyPhoto.css" rel="stylesheet"> 
 	<link href="css/font-awesome.min.css" rel="stylesheet">
