Changed name of about us section
Changed name of about us section to about us instead of why with us.

--- a/new/index.html
+++ b/new/index.html
@@ -103,7 +103,7 @@
 	<div class="container">
 		<div class="text-center">
 			<div class="col-sm-8 col-sm-offset-2">
-				<h2 class="title-one">Why With Us?</h2>
+				<h2 class="title-one">About Us</h2>
 				<p>PCS Distributors provides high quality flooring with exceptional customer service and satisfaction.</p>
 			</div>
 		</div>
