Changed testimonies to testimonials

--- a/new/index.html
+++ b/new/index.html
@@ -332,7 +332,7 @@
 							<div class="clients-wrapper">
 								<div class="row text-center">
 									<div class="col-sm-8 col-sm-offset-2">
-										<h2 class="title-one">Customer Testimonies</h2>
+										<h2 class="title-one">Customer Testimonials</h2>
 									</div>
 								</div>
 								<div id="clients-carousel" class="carousel slide" data-ride="carousel"> <!-- Indicators -->
