changed catalog page text

--- a/new/catalog.html
+++ b/new/catalog.html
@@ -62,8 +62,7 @@
 			<div class="row text-center">
 				<div class="col-sm-8 col-sm-offset-2"> 
 					<br>
-					<h2 class="title-one">Portfolio</h2>
-					<p>Here is a display of some of the excellent work produced by PCS Distributors.</p>
+					<h2 class="title-one">Catalog</h2>
 				</div>
 			</div>
 			<ul class="portfolio-filter text-center">
