testimonies to testimonials
in main menu

--- a/new/index.html
+++ b/new/index.html
@@ -49,7 +49,7 @@
 						<li class="scroll"><a href="#about-us">About Us</a></li> 
 						<li class="scroll"><a href="#services">Products</a></li> 
 						<li class="scroll"><a href="#portfolio">Portfolio</a></li> 
-						<li class="scroll"><a href="#clients">Testimonies</a></li> 
+						<li class="scroll"><a href="#clients">Testimonials</a></li> 
 					</ul> 
 				</div> 
 			</div> 
