Added new pages and link on browse button
added product page and contact page

--- a/new/index.html
+++ b/new/index.html
@@ -70,7 +70,7 @@
 						<div> 
 							<h2 class="heading animated bounceInRight">PCS Distributors</h2> 
 							<p class="animated bounceInLeft">Providing high quality floors since 2016</p> 
-							<a class="btn btn-default slider-btn animated bounceInUp" href="#">Browse Flooring Selection</a> 
+							<a class="btn btn-default slider-btn animated bounceInUp" href="catalog.html">Browse Flooring Selection</a> 
 						</div> 
 					</div> 
 				</div>
@@ -78,7 +78,7 @@
 					<div class="carousel-caption"> <div> 
 						<h2 class="heading animated bounceInRight">Order a sample today!</h2> 
 						<p class="animated bounceInLeft">We provide high quality samples</p> 
-						<a class="btn btn-default slider-btn animated bounceInUp" href="#">Browse Flooring Selection</a> 
+						<a class="btn btn-default slider-btn animated bounceInUp" href="catalog.html">Browse Flooring Selection</a> 
 					</div> 
 				</div> 
 			</div> 
@@ -87,7 +87,7 @@
 					<div> 
 						<h2 class="heading animated bounceInRight">Vast collection of flooring options</h2> 
 						<p class="animated bounceInLeft">At PCS Distributors we provide access to many different manufacturers</p> 
-						<a class="btn btn-default slider-btn animated bounceInUp" href="#">Browse Flooring Selection</a> 
+						<a class="btn btn-default slider-btn animated bounceInUp" href="catalog.html">Browse Flooring Selection</a> 
 					</div> 
 				</div> 
 			</div>
