--- a/new/index.html
+++ b/new/index.html
@@ -45,7 +45,16 @@
 				</div> 
 				<div class="collapse navbar-collapse"> 
 					<ul class="nav navbar-nav navbar-right"> 
-						<li class="scroll active"><a href="#navigation">Home</a></li> 
+				        <li class="dropdown">
+				          	<a href="#navigation" class="scroll dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span class="caret"></span></a>
+					          <ul class="dropdown-menu">
+					            <li><a href="catalog.html">Product Catalog</a></li>
+					            <li role="separator" class="divider"></li>
+					            <li><a href="#">Separated link</a></li>
+					            <li role="separator" class="divider"></li>
+					            <li><a href="#">One more separated link</a></li>
+					          </ul>
+				        </li>
 						<li class="scroll"><a href="#about-us">About Us</a></li> 
 						<li class="scroll"><a href="#services">Products</a></li> 
 						<li class="scroll"><a href="#portfolio">Portfolio</a></li> 
