updated catalog page: clicking thumbnail opens product popover; hover on thumbnail zooms in; updated header

--- a/new/catalog.html
+++ b/new/catalog.html
@@ -3,8 +3,8 @@
 <head> 
 	<meta charset="utf-8"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-	<meta name="description" content="PCS Distributors">
-	<title>PCS Distributors</title> 
+	<meta name="description" content="PCS Distributors product catalog">
+	<title>Product Catalog | PCS Distributors</title> 
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/prettyPhoto.css" rel="stylesheet"> 
 	<link href="css/font-awesome.min.css" rel="stylesheet">
@@ -44,11 +44,12 @@
 				</div> 
 				<div class="collapse navbar-collapse"> 
 					<ul class="nav navbar-nav navbar-right"> 
-						<li class="scroll active"><a href="/#navigation">Home</a></li> 
-						<li class="scroll"><a href="/#about-us">About Us</a></li> 
-						<li class="scroll"><a href="/#services">Products</a></li> 
-						<li class="scroll"><a href="/#portfolio">Portfolio</a></li> 
-						<li class="scroll"><a href="/#clients">Testimonies</a></li> 
+						<li class="scroll"><a href="#navigation">Home</a></li>
+						<li class="scroll"><a href="#about-us">About Us</a></li>						
+						<li class="scroll"><a href="#portfolio">Portfolio</a></li> 
+						<li class="scroll"><a href="#clients">Testimonials</a></li>
+						<li class="scroll active"><a href="catalog.html">Products</a></li> 
+						<li><a href="contact.html">Contact</a></li>
 					</ul> 
 				</div> 
 			</div> 
@@ -76,172 +77,132 @@
 				<div class="col-sm-3 col-xs-12 portfolio-item wood">
 					<div class="view efffect">
 						<div class="portfolio-image">
-							<img src="images/portfolio/1.jpg" alt=""></div> 
-							<div class="mask text-center">
-								<h3>Product</h3>
-								<h4>Product Description</h4>
-								<a href="#"><i class="fa fa-link"></i></a>
-								<a href="images/portfolio/big-item1.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-							</div>
+							<a class="portfolioAnchor" href="images/portfolio/big-item1.jpg" rel="image1URL" data-gallery="prettyPhoto" title="description1 description1 description1 description1 description1 ">
+								<img src="images/portfolio/1.jpg" alt="title1 ,msdnfskjdf;ljsldjfsdjflkskfjlskdfj"/> 		
+							</a>
 						</div>
 					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item laminate">
-						<div class="view efffect" >
-							<div class="portfolio-image">
-								<img src="images/portfolio/2.jpg" alt="">
-							</div> 
-							<div class="mask text-center">
-								<h3>Product</h3>
-								<h4>Product Description</h4>
-								<a href="#"><i class="fa fa-link"></i></a>
-								<a href="images/portfolio/big-item2.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item carpet">
-						<div class="view efffect">
-							<div class="portfolio-image">
-								<img src="images/portfolio/3.jpg" alt="">
-							</div> 
-							<div class="mask text-center">
-								<h3>Product</h3>
-								<h4>Product Description</h4>
-								<a href="#"><i class="fa fa-link"></i></a>
-								<a href="images/portfolio/big-item3.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item logo">
-						<div class="view efffect">
-							<div class="portfolio-image">
-								<img src="images/portfolio/4.jpg" alt="">
-							</div> 
-							<div class="mask text-center">
-								<h3>Product</h3>
-								<h4>Product Description</h4>
-								<a href="#"><i class="fa fa-link"></i></a>
-								<a href="images/portfolio/big-item4.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item wood">
-						<div class="view efffect">
-							<div class="portfolio-image">
-								<img src="images/portfolio/5.jpg" alt="">
-							</div> <div class="mask text-center">
-							<h3>Product</h3>
-							<h4>Product Description</h4>
-							<a href="#"><i class="fa fa-link"></i></a>
-							<a href="images/portfolio/big-item5.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+				</div>
+				<div class="col-sm-3 col-xs-12 portfolio-item laminate">
+					<div class="view efffect" >
+						<div class="portfolio-image">
+							<a class="portfolioAnchor" href="images/portfolio/big-item2.jpg" rel="image2URL" data-gallery="prettyPhoto"  title="description2">
+								<img src="images/portfolio/2.jpg" alt="title2"/> 		
+							</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-sm-3 col-xs-12 portfolio-item carpet">
 					<div class="view efffect">
 						<div class="portfolio-image">
-							<img src="images/portfolio/6.jpg" alt="">
+							<a class="portfolioAnchor" href="images/portfolio/big-item3.jpg" rel="image3URL" data-gallery="prettyPhoto" title="description3">
+								<img src="images/portfolio/3.jpg" alt="title3">
+							</a>
 						</div> 
-						<div class="mask text-center">
-							<h3>Product</h3>
-							<h4>Product Description</h4>
-							<a href="#"><i class="fa fa-link"></i></a>
-							<a href="images/portfolio/big-item6.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-						</div>
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-12 portfolio-item logo">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<a class="portfolioAnchor" href="images/portfolio/big-item4.jpg" rel="image4URL" data-gallery="prettyPhoto" title="description4">
+								<img src="images/portfolio/4.jpg" alt="title4">
+							</a>
+						</div> 
 					</div>
 				</div>
 				<div class="col-sm-3 col-xs-12 portfolio-item wood">
 					<div class="view efffect">
 						<div class="portfolio-image">
-							<img src="images/portfolio/7.jpg" alt="">
+							<a class="portfolioAnchor" href="images/portfolio/big-item5.jpg" rel="image5URL" data-gallery="prettyPhoto" title="description5">
+								<img src="images/portfolio/5.jpg" alt="title5">
+							</a>
 						</div> 
-						<div class="mask text-center">
-							<h3>Product</h3>
-							<h4>Product Description</h4>
-							<a href="#"><i class="fa fa-link"></i></a>
-							<a href="images/portfolio/big-item7.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-						</div>
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-12 portfolio-item carpet">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<a class="portfolioAnchor" href="images/portfolio/big-item6.jpg" rel="image6URL" data-gallery="prettyPhoto" title="description6">
+								<img src="images/portfolio/6.jpg" alt="title6">
+							</a>
+						</div> 
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-12 portfolio-item wood">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<a class="portfolioAnchor" href="images/portfolio/big-item7.jpg" rel="image7URL" data-gallery="prettyPhoto" title="description7">
+								<img src="images/portfolio/7.jpg" alt="title7">
+							</a>
+						</div> 
 					</div>
 				</div>
 				<div class="col-sm-3 col-xs-12 portfolio-item laminate">
 					<div class="view efffect">
 						<div class="portfolio-image">
-							<img src="images/portfolio/8.jpg" alt=""></div> 
-							<div class="mask text-center">
-								<h3>Product</h3>
-								<h4>Product Description</h4>
-								<a href="#"><i class="fa fa-link"></i></a>
-								<a href="images/portfolio/big-item8.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item wood">
-						<div class="view efffect">
-							<div class="portfolio-image">
-								<img src="images/portfolio/9.jpg" alt="">
-							</div> 
-							<div class="mask text-center">
-								<h3>Product</h3>
-								<h4>Product Description</h4>
-								<a href="#"><i class="fa fa-link"></i></a>
-								<a href="images/portfolio/big-item9.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item carpet">
-						<div class="view efffect">
-							<div class="portfolio-image">
-								<img src="images/portfolio/10.jpg" alt=""></div> 
-								<div class="mask text-center">
-									<h3>Product</h3>
-									<h4>Product Description</h4>
-									<a href="#"><i class="fa fa-link"></i></a>
-									<a href="images/portfolio/big-item10.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-								</div>
-							</div>
-						</div>
-						<div class="col-sm-3 col-xs-12 portfolio-item laminate">
-							<div class="view efffect">
-								<div class="portfolio-image">
-									<img src="images/portfolio/11.jpg" alt=""></div> 
-									<div class="mask text-center">
-										<h3>Product</h3>
-										<h4>Product Description</h4>
-										<a href="#"><i class="fa fa-link"></i></a>
-										<a href="images/portfolio/big-item11.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-									</div>
-								</div>
-							</div>
-							<div class="col-sm-3 col-xs-12 portfolio-item logo">
-								<div class="view efffect">
-									<div class="portfolio-image">
-										<img src="images/portfolio/12.jpg" alt=""></div> 
-										<div class="mask text-center">
-											<h3>Product</h3>
-											<h4>Product Description</h4>
-											<a href="#"><i class="fa fa-link"></i></a>
-											<a href="images/portfolio/big-item12.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-										</div>
-									</div>
-								</div>
-							</div>
+							<a class="portfolioAnchor" href="images/portfolio/big-item8.jpg" rel="image8URL" data-gallery="prettyPhoto" title="description8">
+								<img src="images/portfolio/8.jpg" alt="title8">
+							</a>
 						</div> 
-					</section> <!--/#portfolio-->
-
-					<footer id="footer"> 
-						<div class="container"> 
-							<div class="text-center"> 
-								<p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> - PCS Distributors | All Rights Reserved
-								</p> 
-							</div> 
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-12 portfolio-item wood">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<a class="portfolioAnchor" href="images/portfolio/big-item9.jpg" rel="image9URL" data-gallery="prettyPhoto" title="description9">
+								<img src="images/portfolio/9.jpg" alt="title9">
+							</a>
 						</div> 
-					</footer> <!--/#footer--> 
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-12 portfolio-item carpet">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<a class="portfolioAnchor" href="images/portfolio/big-item10.jpg" rel="image10URL" data-gallery="prettyPhoto" title="description10">
+								<img src="images/portfolio/10.jpg" alt="title10">
+							</a>
+						</div> 
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-12 portfolio-item laminate">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<a class="portfolioAnchor" href="images/portfolio/big-item11.jpg" rel="image11URL" data-gallery="prettyPhoto" title="description11">
+								<img src="images/portfolio/11.jpg" alt="title11">
+							</a>
+						</div> 
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-12 portfolio-item logo">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<a class="portfolioAnchor" href="images/portfolio/big-item12.jpg" rel="image12URL" data-gallery="prettyPhoto" title="description12">
+								<img src="images/portfolio/12.jpg" alt="title12">
+							</a>
+						</div> 
+					</div>
+				</div>
 
-					<script type="text/javascript" src="js/jquery.js"></script> 
-					<script type="text/javascript" src="js/bootstrap.min.js"></script>
-					<script type="text/javascript" src="js/smoothscroll.js"></script> 
-					<script type="text/javascript" src="js/jquery.isotope.min.js"></script>
-					<script type="text/javascript" src="js/jquery.prettyPhoto.js"></script> 
-					<script type="text/javascript" src="js/jquery.parallax.js"></script> 
-					<script type="text/javascript" src="js/main.js"></script> 
-				</body>
-				</html>
+			</div> 
+		</section> <!--/#portfolio-->
+
+
+
+		<footer id="footer"> 
+			<div class="container"> 
+				<div class="text-center"> 
+					<p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> - PCS Distributors | All Rights Reserved
+					</p> 
+				</div> 
+			</div> 
+		</footer> <!--/#footer--> 
+
+		<script type="text/javascript" src="js/jquery.js"></script> 
+		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="js/smoothscroll.js"></script> 
+		<script type="text/javascript" src="js/jquery.isotope.min.js"></script>
+		<script type="text/javascript" src="js/jquery.prettyPhoto.js"></script> 
+		<script type="text/javascript" src="js/jquery.parallax.js"></script> 
+		<script type="text/javascript" src="js/main.js"></script> 
+	</body>
+</html>
