--- a/new/index_BASE_7580.html
+++ b/new/index_BASE_7580.html
@@ -45,12 +45,20 @@
 				</div> 
 				<div class="collapse navbar-collapse"> 
 					<ul class="nav navbar-nav navbar-right"> 
-						<li class="scroll active"><a href="#navigation">Home</a></li>
-						<li class="scroll"><a href="#about-us">About Us</a></li>						
+				        <li class="dropdown">
+				          	<a href="#navigation" class="scroll dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span class="caret"></span></a>
+					          <ul class="dropdown-menu">
+					            <li><a href="catalog.html">Product Catalog</a></li>
+					            <li role="separator" class="divider"></li>
+					            <li><a href="#">Separated link</a></li>
+					            <li role="separator" class="divider"></li>
+					            <li><a href="#">One more separated link</a></li>
+					          </ul>
+				        </li>
+						<li class="scroll"><a href="#about-us">About Us</a></li> 
+						<li class="scroll"><a href="#services">Products</a></li> 
 						<li class="scroll"><a href="#portfolio">Portfolio</a></li> 
-						<li class="scroll"><a href="#clients">Testimonials</a></li>
-						<li><a href="catalog.html">Products</a></li> 
-						<li><a href="contact.html">Contact</a></li>
+						<li class="scroll"><a href="#clients">Testimonials</a></li> 
 					</ul> 
 				</div> 
 			</div> 
@@ -100,13 +108,12 @@
 
 </section><!--/#home-->
 
-	<section id="about-us">
-		<div class="container">
-			<div class="text-center">
-				<div class="col-sm-8 col-sm-offset-2">
-					<h2 class="title-one">About Us</h2>
-					<p>PCS Distributors provides high quality flooring with exceptional customer service and satisfaction.</p>
-				</div>
+<section id="about-us">
+	<div class="container">
+		<div class="text-center">
+			<div class="col-sm-8 col-sm-offset-2">
+				<h2 class="title-one">About Us</h2>
+				<p>PCS Distributors provides high quality flooring with exceptional customer service and satisfaction.</p>
 			</div>
 		</div>
 	</section><!--/#about-us-->
@@ -115,6 +122,8 @@
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-sm-8 col-sm-offset-2">
+					<h2 class="title-one">Products</h2>
+					<p>Placeholder</p>
 				</div>
 			</div>
 			<div class="row">
@@ -183,7 +192,7 @@
 									<a href="images/portfolio/big-item1.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 								</div>
 							</div>
-							</div>
+						</div>
 						<div class="col-sm-3 col-xs-12 portfolio-item laminate">
 							<div class="view efffect" >
 								<div class="portfolio-image">
