minor changes/fixes

--- a/new/catalog.html
+++ b/new/catalog.html
@@ -61,9 +61,9 @@
 	<section id="portfolio">
 		<div class="container">
 			<div class="row text-center">
-				<div class="col-sm-8 col-sm-offset-2"> 
+				<div class="col-sm-8 col-sm-offset-2" style="margin-top:75px"> 
 					<br>
-					<h2 class="title-one">Catalog</h2>
+					<h2 class="title-one animated bounceInDown">Catalog</h2>
 				</div>
 			</div>
 			<ul class="portfolio-filter text-center">
