--- a/new/contact.html
+++ b/new/contact.html
@@ -66,7 +66,7 @@
 					<p class="animated bounceInRight">3283 De La Cruz Blvd Suite J., Santa Clara, Ca 95054</p>
 					<p class="animated bounceInLeft">Toll Free (800) 238-4727</p>
 					<p class="animated bounceInRight">Fax: (408) 436-7943</p>
-					<p class="animated bounceInLeft">info@psdistributors.com</p>
+					<p class="animated bounceInLeft">info@pcsdistributors.com</p>
 				</div>
 			</div>
 		</div>
@@ -77,7 +77,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>Contact form</h1>
-                    <p class="lead">Enter you contact information to contact PCSDistributors</p>
+                    <p class="lead">Enter your contact information to contact PCSDistributors</p>
 						<form id="contact-form" method="post" action="contact.php" role="form">
 
 						    <div class="messages"></div>
