removed margin-top from catalog portion of index.html

--- a/new/index.html
+++ b/new/index.html
@@ -159,7 +159,7 @@
 	<section id="portfolio">
 		<div class="container">
 			<div class="row text-center">
-				<div class="col-sm-8 col-sm-offset-2" style="margin-top:75px"> 
+				<div class="col-sm-8 col-sm-offset-2"> 
 					<br>
 					<h2 class="title-one animated bounceInDown">Catalog</h2>
 				</div>
