--- a/new/databaseInsertTemplate.html
+++ b/new/databaseInsertTemplate.html
@@ -106,7 +106,7 @@
 						            <div class="col-md-6">
 						                <div class="form-group">
 						                    <label for="form_picture">Picture *</label>
-						                    <input id="form_picture" type="file" name="picture[]" class="fileupload1" required="required" data-error="Pictures are required">
+						                    <input id="form_picture" type="file" name="picture[]" class="form-control-file fileupload1" required="required" data-error="Pictures are required">
 						                    <div class="help-block with-errors"></div>						                    
 						                </div>
 						            </div>
@@ -121,6 +121,7 @@
 												<div id="colorimages" class="tab-pane fade in active">
 													<div class="form-group">													
 									                    <input id="form_colors" type="file" name="colors[]" class="form-control-file fileupload2" placeholder="Please enter colors"></input>
+									                    <input id="form_colorname" type="text" name="colornames[]" class="form-control nameinput" placeholder="Name of color">
 									                    <div class="help-block with-errors"></div>
 													</div>
 												</div>
@@ -196,10 +197,10 @@
 </body>
 <script>
 	$('#queryInsert-form').delegate('input.fileupload1', 'change', function(){
-	  $('form input.fileupload1').last().after($('<input type="file" name="picture[]" class="fileupload1" />'));
+	  $('form input.fileupload1').last().after($('<input type="file" name="picture[]" class="form-control-file fileupload1" />'));
 	});
 	$('#queryInsert-form').delegate('input.fileupload2', 'change', function(){
-	  $('form input.fileupload2').last().after($('<input type="file" name="colors[]" class="fileupload2" />'));
+	  $('form input.nameinput').last().after($('<input type="file" name="colors[]" class="form-control-file fileupload2" /><input id="form_colorname" type="text" name="colornames[]" class="form-control nameinput" placeholder="Name of color" />'));
 	});
 	$('#queryInsert-form').delegate('button.colorbutton', 'click', function(){
 	  $('form input.colorinput').last().after($('<input id="form_colorcodes" type="text" name="colorcodes[]" class="colorinput form-control" placeholder="Please enter color codes" required="required" data-error="Valid color code is required." />'));
