integrated some of the product page's cart functionality

--- a/new/cart.html
+++ b/new/cart.html
@@ -159,8 +159,8 @@
     <script type="text/javascript" src="js/jquery.prettyPhoto.js"></script>
     <script type="text/javascript" src="js/jquery.parallax.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-    <script src="js/jquery.cookie.js"></script>
-    <script src="js/cart.js">
+    <script type="text/javascript" src="js/jquery.cookie.js"></script>
+    <script type="text/javascript" src="js/cart.js">
     </script>
 </body>
 
